--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "index.js",
   "repository": "https://github.com/fetaoily/fabricjs-extra.git",
   "author": "fetaoily <fetaoily@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "vue serve ./examples/index.vue"
+  },
+  "devDependencies": {
+    "fabric": "2.4.3"
+  }
 }
