--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/fetaoily/fabricjs-extra.git",
   "author": "fetaoily <fetaoily@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "fabric.js",
+    "fabricjs-extra"
+  ],
   "scripts": {
     "dev": "vue serve ./examples/index.vue"
   },
