--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vue/cli": "3.1.1",
     "@vue/cli-service-global": "3.1.2",
+    "element-ui": "2.4.9",
     "fabric": "2.4.3"
   }
 }
