--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "fabric": "2.4.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.8",
+    "@fortawesome/free-solid-svg-icons": "5.5.0",
+    "@fortawesome/vue-fontawesome": "0.1.2",
     "@vue/cli": "3.1.1",
     "@vue/cli-service-global": "3.1.2",
     "element-ui": "2.4.9"
