--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/vue-fontawesome": "0.1.2",
     "@vue/cli": "3.1.1",
     "@vue/cli-service-global": "3.1.2",
-    "element-ui": "2.4.9"
+    "element-ui": "2.4.9",
+    "local-storage": "1.4.2"
   }
 }
